kubernetes/apps/rook-ceph/addons/service-nfs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-nfs
  namespace: rook-ceph
#  annotations:
#    metallb.universe.tf/loadBalancerIPs: "${METALLB_INGRESS_ADDR}"
#    coredns.io/hostname: ceph-nfs
spec:
  ports:
    - name: nfs
      port: 2049
#  type: LoadBalancer
#  externalTrafficPolicy: Local
  selector:
    app: rook-ceph-nfs
    ceph_nfs: nfs
    instance: a
