kubernetes/apps/rook-ceph/addons/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    external-dns.alpha.kubernetes.io/target: "ipv4.rengo.dev"
    external-dns.home.arpa/enabled: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: rgw-ceph-objectstore
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
    - host: &host "s3.rengo.dev"
      http:
        paths:
          - backend:
              service:
                name: rgw-ceph-objectstore
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: s3-tls
